kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: non-programming-languages
  namespace: web-hosting
spec:
  selector:
    app: non-programming-languages
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
